--- a/fontend/styles/style.css
+++ b/fontend/styles/style.css
@@ -1,5 +1,44 @@
 /*Bootstrap overwrite css file*/
+/*Global Styles*/
+body{
+    height: 100%;
+}
 /*Header Styles*/
 #header-logo{
     width: 80px;
+}
+.footer-nav{
+    float: none; 
+    margin: 0 auto;
+}
+
+/*Home Styles*/
+.home-container{
+    margin-top: 40px;
+}
+#gmap_canvas{
+    width:100%;
+    height:400px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    border: 1px solid lightgray;
+    border-radius: calc(.25rem - 1px) calc(.25rem - 1px) 0 0;
+}
+.program-list-card{
+    height: 500px;
+}
+.program-list-card .card-body{
+    overflow-y: scroll;
+}
+.card-header{
+    font-weight: bold;
+}
+.event-icon{
+    float:right;
+}
+.event-card{
+    margin-bottom: 10px;
+}
+.event-card:hover{
+    background-color: #F8F8F8;
 }
