--- a/fontend/styles/style.css
+++ b/fontend/styles/style.css
@@ -47,7 +47,7 @@ body{
 
 .accordion .card-header {
     width:100%;
-    padding:0;
+    padding:0px;
 }
 .accordion .card-header button.btn{
     width: 100%;
@@ -70,14 +70,49 @@ body{
 .accordion .form-check-label{
     padding-bottom: 5px;
 }
-.filter-col{
-    padding-left: 0;
+.search-bar, #results-box{
+    padding-left: 15px;
+    padding-right: 15px; 
+    margin-top: 15px;
 }
-
+@media (min-width: 576px){
+    .filter-col {
+        padding-left: 0;  
+    }
+    .search-bar{
+        padding:0;
+        margin: 0;
+    }
+    #results-box{
+        padding:0;
+    }
+    .right-info{
+        text-align: right !important;
+    }
+}
+.distance-input{
+    margin-bottom:10px;
+}
+#results-box{
+    width:100%;
+}
+#results-box .card{
+    margin-bottom:10px;
+}
+.filter-btn-row{
+    margin-top:10px;
+}
+.filter-btn-row button{
+    padding:5px;
+    background-color: white;
+}
+.event-box:hover{
+    cursor: pointer;
+}
+.right-info{
+    text-align: left;
+}
 /*Event Page Styles*/
-.event-page-card i.fa{
-    width: 20px;
-}
 .event-container{
     margin-bottom: 40px;
 }
@@ -232,7 +267,7 @@ body{
 }
 
 /*icon width fix*/
-i.fa{
+.event-page-card i.fa{
     width:30px;
 }
 button i.fa{
