--- a/fontend/styles/style.css
+++ b/fontend/styles/style.css
@@ -36,6 +36,14 @@ body{
 .home-container, .event-container {
     margin-top: 40px;
 }
+/*Leaflet Map Styles*/
+#mapid{
+    height: 400px; 
+    width: 100%; 
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+/* Google Maps Styles
 #gmap_canvas{
     width:100%;
     height:400px;
@@ -43,7 +51,7 @@ body{
     margin-bottom: 20px;
     border: 1px solid lightgray;
     border-radius: calc(.25rem - 1px) calc(.25rem - 1px) 0 0;
-}
+}*/
 
 .accordion .card-header {
     width:100%;
