--- a/grasa_event_locator/static/css/custom.css
+++ b/grasa_event_locator/static/css/custom.css
@@ -55,10 +55,6 @@ body{
     text-decoration: none;
     color: black;
 }
-/*.accordion .card-header button.btn:focus{
-    box-shadow: 0 0 5px rgba(0, 123, 255, 1);
-    border: 1px solid rgba(0, 123, 255, 1);
-}*/
 .accordion .card-header button.btn i{
     padding: 5px;
 }
@@ -116,15 +112,9 @@ body{
 .right-info{
     text-align: left;
 }
-.filter-alert{
-    display: none;
-}
 /*Event Page Styles*/
 .event-container{
     margin-bottom: 40px;
-}
-.activity-badges{
-    font-size: 1.1rem;
 }
 
 /*Log-in page styles*/
@@ -318,78 +308,19 @@ button i.fa{
         margin-bottom: 140px;
     }
 }
-
-
-/*Styles for About section*/
-.about-container {
-	text-align: left;    
-	border-radius: 5px;
-	background-color: #EFFBEF;      
-    padding-left:20px;
-	padding-right:20px;
-	padding-top:20px;
-	margin-top: 20px;
+.pocFieldset{
+    padding: 10px;
+    border-radius: 5px;
+    border:lightgray 1px solid;
+    margin-bottom: 10px;
+}
+.pocFieldset legend{
+    width: auto;
+    padding-left: 5px;
+    padding-right: 5px;
 }
 
-.about-container p {
-	max-width: 800px;
-	margin: 40px auto;
-	line-height: 1.5em;
-	font-size: 1.1em;
-	padding: 10px;
-}
 
-.about-row {
-	background: #EFFBEF;
-	
-}
-.about-row span.subhead {
-	font-size:1.5em;
-	text-align:center;
-	display:block;
-	position:relative;
-	
-}
 
-#about {
-	font-size:3em;
-	text-align:center;
-	display:block;
-	position:relative;
-}
 
-span.subhead::before, span.subhead::after {
-	content: "";
-	width:60px;
-	height:6px;
-	border-top: 1px solid #088A29;
-	display: inline-block;
-	margin: 0 10px;
-}
 
-/*Styles for Contact section*/
-.contact-container {
-	text-align: left;
-    border: solid 1px lightgray;    
-    padding:5px;
-    padding-left:20px;
-	padding-right:20px;
-	margin-top:40px;
-}
-
-.contact-container button {
-  margin-bottom: 10px;
-  background-color: #4CAF50;
-  color: white;
-}
-
-.address p{
-	font-weight: 600;
-}
-
-#contact {
-	font-size:3em;
-	text-align:center;
-	display:block;
-	position:relative;
-}
