--- a/grasa_event_locator/static/css/custom.css
+++ b/grasa_event_locator/static/css/custom.css
@@ -36,6 +36,14 @@ body{
 .home-container, .event-container {
     margin-top: 40px;
 }
+/*Leaflet Map Styles*/
+#mapid{
+    height: 400px; 
+    width: 100%; 
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+/* Google Maps Styles
 #gmap_canvas{
     width:100%;
     height:400px;
@@ -43,7 +51,7 @@ body{
     margin-bottom: 20px;
     border: 1px solid lightgray;
     border-radius: calc(.25rem - 1px) calc(.25rem - 1px) 0 0;
-}
+}*/
 
 .accordion .card-header {
     width:100%;
@@ -55,6 +63,10 @@ body{
     text-decoration: none;
     color: black;
 }
+/*.accordion .card-header button.btn:focus{
+    box-shadow: 0 0 5px rgba(0, 123, 255, 1);
+    border: 1px solid rgba(0, 123, 255, 1);
+}*/
 .accordion .card-header button.btn i{
     padding: 5px;
 }
@@ -112,9 +124,15 @@ body{
 .right-info{
     text-align: left;
 }
+.filter-alert{
+    display: none;
+}
 /*Event Page Styles*/
 .event-container{
     margin-bottom: 40px;
+}
+.activity-badges{
+    font-size: 1.1rem;
 }
 
 /*Log-in page styles*/
@@ -273,7 +291,11 @@ body{
 button i.fa{
     width:auto;
 }
-
+/*Admin Page*/
+#addAdmin, #allUsers{
+    margin-left: 20px;
+    margin-bottom: 10px;
+}
 /*style for Admin page submit button*/
 .admin-logo-change{
     width: 100px;
@@ -319,7 +341,75 @@ button i.fa{
     padding-left: 5px;
     padding-right: 5px;
 }
+/*All Users*/
+.allUsersContainer{
+    padding:20px;
+}
 
+/*Styles for About section*/
+.about-container {
+	text-align: left;    
+	border-radius: 5px;
+	background-color: #EFFBEF;      
+    padding-left:20px;
+	padding-right:20px;
+	padding-top:20px;
+	margin-top: 20px;
+}
+
+.about-container p {
+	max-width: 800px;
+	margin: 40px auto;
+	line-height: 1.5em;
+	font-size: 1.1em;
+	padding: 10px;
+}
+
+.about-row {
+	background: #EFFBEF;
+	
+}
+.about-row span.subhead {
+	font-size:1.5em;
+	text-align:center;
+	display:block;
+	position:relative;
+	
+}
+
+#about {
+	font-size:3em;
+	text-align:center;
+	display:block;
+	position:relative;
+}
+
+span.subhead::before, span.subhead::after {
+	content: "";
+	width:60px;
+	height:6px;
+	border-top: 1px solid #088A29;
+	display: inline-block;
+	margin: 0 10px;
+}
+
+/*Styles for Contact section*/
+.contact-container {
+	text-align: left;
+    /*border: solid 1px lightgray;    */
+    padding:5px;
+    padding-left:20px;
+	padding-right:20px;
+	margin-top:40px;
+}
+
+
+#contact {
+	font-size:3em;
+	text-align:center;
+	display:block;
+	position:relative;
+}
 
 
 
