--- a/grasa_event_locator/templates/base.html
+++ b/grasa_event_locator/templates/base.html
@@ -10,7 +10,7 @@
 
     <title>{% templatetag openblock %} block page_title {% templatetag closeblock %}{{ _("My Site") }}{% templatetag openblock %} endblock {% templatetag closeblock %}</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <link rel="stylesheet" href="{% templatetag openblock %} static 'css/base.css' {% templatetag closeblock %}">
+    <link rel="stylesheet" href="{% templatetag openblock %} static 'css/custom.css' {% templatetag closeblock %}">
 </head>
 
 <body>
