--- a/grasa_event_locator/templates/search/search.html
+++ b/grasa_event_locator/templates/search/search.html
@@ -1,5 +1,44 @@
 {% include "header.php" %}
-<!-- Homepage -->
+{% comment %}
+{% block content %}
+    <h2>Search</h2>
+
+    <form method="get" action=".">
+        <table>
+            {{ form.as_table }}
+            <tr>
+                <td>&nbsp;</td>
+                <td>
+                    <input type="submit" value="Search">
+                </td>
+            </tr>
+        </table>
+
+        {% if query %}
+            <h3>Results</h3>
+
+            {% for result in page.object_list %}
+                <p>
+                    <a href="{% url 'event_page' result.object.id %}">{{ result.object.title }}</a>
+                </p>
+            {% empty %}
+                <p>No results found.</p>
+            {% endfor %}
+
+            {% if page.has_previous or page.has_next %}
+                <div>
+                    {% if page.has_previous %}<a href="?q={{ query }}&amp;page={{ page.previous_page_number }}">{% endif %}&laquo; Previous{% if page.has_previous %}</a>{% endif %}
+                    |
+                    {% if page.has_next %}<a href="?q={{ query }}&amp;page={{ page.next_page_number }}">{% endif %}Next &raquo;{% if page.has_next %}</a>{% endif %}
+                </div>
+            {% endif %}
+        {% else %}
+            {# Show some example queries to run, maybe query syntax, something else? #}
+        {% endif %}
+    </form>
+    {% endblock %}
+    {% endcomment %}
+    <!-- Homepage -->
 <div class="container home-container">
     <div class="row">
     <!-- most outer row-->
@@ -27,34 +66,38 @@
             <div class="row">
             <!-- search bar row-->
                 <div class="input-group mb-3 search-bar">
-                  <input type="text" class="form-control" placeholder="Search..." aria-label="Search for a Program by name" aria-describedby="button-addon2">
+                <form method="get" action=".">
+                  {{ form.q }}
                   <div class="input-group-append">
-                    <button class="btn btn-outline-secondary" type="button" id="button-addon2" aria-label="Search"><i class="fa fa-search" aria-hidden="true"></i></button>
+                    <button class="btn btn-outline-secondary" type="submit" id="button-addon2" aria-label="Search" value="Search"><i class="fa fa-search" aria-hidden="true"></i></button>
                   </div>
+                </form>
                 </div>
             </div>
             <div class="row">
             <!-- Search Results Row-->
                 <div id="results-box">
-            {% for event in allEventList %}
-                    <a href="{% url 'event_page' event.id %}"> <div class="card w-100 event-box">
+            {% if query %}    
+            {% for result in object_list %}
+                    <a href="{% url 'event_page' result.object.id %}"> <div class="card w-100 event-box">
                       <div class="card-body row">
                         <div class="col-sm-6">
-                            <h5 class="card-title">{{ event.title }}</h5>
-                            <h6 class="card-subtitle mb-2 text-muted">{{ event.user_id.org_name }}</h6>
+                            <h5 class="card-title">{{ result.object.title }}</h5>
+                            <h6 class="card-subtitle mb-2 text-muted">{{ result.object.user_id.org_name }}</h6>
                         </div>
                         <div class="col-sm-6 right-info">
-                                {% for t in event.categories.all %}
+                                {% for t in result.object.categories.all %}
                                 <span class="badge badge-info card-title">
                                 {{ t }}
                                 </span>
                                 {% endfor %}
-                            <h6 class="card-subtitle mb-2 text-muted"><i class="fa fa-map-marker" aria-hidden="true"></i> {{ event.address }}</h6>
+                            <h6 class="card-subtitle mb-2 text-muted"><i class="fa fa-map-marker" aria-hidden="true"></i> {{ result.object.address }}</h6>
                         </div>                      
                       </div>
                     </div>
                     <a>
                     {% endfor %}
+                    {% endif %}
                 </div>
             </div>
         </div>
