Edited Home page design

--- a/grasa_event_locator/static/css/custom.css
+++ b/grasa_event_locator/static/css/custom.css
@@ -411,6 +411,20 @@ span.subhead::before, span.subhead::after {
 	position:relative;
 }
 
+/*Styles for HomePage title*/
+.jumbotron {
+	background-color: #4CAF50;
+	position: relative;
+
+}
+
+.jumbotron p {
+	text-align:center;
+}
+
+.alert alert-block alert-danger {
+	display: none;
+}
 
 
 
