--- a/grasa_event_locator/static/css/custom.css
+++ b/grasa_event_locator/static/css/custom.css
@@ -413,7 +413,7 @@ span.subhead::before, span.subhead::after {
 
 /*Styles for HomePage title*/
 .jumbotron {
-	background-color: #4CAF50;
+	background-color: #EFFBEF;
 	position: relative;
 
 }
