fixed forms on search page to work with py code

--- a/grasa_event_locator/static/css/custom.css
+++ b/grasa_event_locator/static/css/custom.css
@@ -82,6 +82,10 @@ body{
 .accordion .form-check-label{
     padding-bottom: 5px;
 }
+.accordion ul{
+    list-style-type: none;
+    padding: 0;
+}
 .search-bar, #results-box{
     padding-left: 15px;
     padding-right: 15px; 
