--- a/grasa_event_locator/static/css/custom.css
+++ b/grasa_event_locator/static/css/custom.css
@@ -82,10 +82,18 @@ body{
 .accordion .form-check-label{
     padding-bottom: 5px;
 }
+.accordion ul{
+    list-style-type: none;
+    padding: 0;
+}
 .search-bar, #results-box{
     padding-left: 15px;
     padding-right: 15px; 
     margin-top: 15px;
+}
+#results-box a{
+    color: inherit;
+    text-decoration: none;
 }
 @media (min-width: 576px){
     .filter-col {
@@ -130,6 +138,9 @@ body{
 /*Event Page Styles*/
 .event-container{
     margin-bottom: 40px;
+}
+.event-page-card a{
+    text-decoration: none;
 }
 .activity-badges{
     font-size: 1.1rem;
@@ -285,7 +296,7 @@ body{
 }
 
 /*icon width fix*/
-.event-page-card i.fa{
+.event-page-card i.fa, .event-container i.fa{
     width:30px;
 }
 button i.fa{
