Many UI Updates
removed hover effect on tables
made buttons unclickable for pending events in provider
created a modal for creating new admin
Hid lat long in create event along with more validation
Style updates to the header
added input and toast to change name in provider

--- a/grasa_event_locator/static/css/custom.css
+++ b/grasa_event_locator/static/css/custom.css
@@ -132,7 +132,7 @@ body{
 .right-info{
     text-align: left;
 }
-.filter-alert{
+.filter-alert, .changeName-alert{
     display: none;
 }
 /*Event Page Styles*/
@@ -293,6 +293,9 @@ body{
     padding-top:50px;
     padding-left: 10px;  
     padding-bottom: 20px;
+}
+.changeNameInput{
+    visibility: hidden;
 }
 
 /*icon width fix*/
