Pages and buttons added for view all admins and view all events. allusers converted to view all providers

--- a/grasa_event_locator/static/css/custom.css
+++ b/grasa_event_locator/static/css/custom.css
@@ -306,13 +306,13 @@ button i.fa{
     width:auto;
 }
 /*Admin Page*/
-#addAdmin, #allUsers{
+#addAdmin{
     margin-left: 20px;
     margin-bottom: 10px;
 }
 /*style for Admin page submit button*/
 .admin-logo-change{
-    width: 100px;
+    width: 120px;
     margin:0 auto;
 }
 .provider-logo-change{
