--- a/grasa_event_locator/static/css/custom.css
+++ b/grasa_event_locator/static/css/custom.css
@@ -132,7 +132,7 @@ body{
 .right-info{
     text-align: left;
 }
-.filter-alert{
+.filter-alert, .changeName-alert{
     display: none;
 }
 /*Event Page Styles*/
@@ -294,6 +294,9 @@ body{
     padding-left: 10px;  
     padding-bottom: 20px;
 }
+.changeNameInput{
+    visibility: hidden;
+}
 
 /*icon width fix*/
 .event-page-card i.fa, .event-container i.fa{
@@ -303,13 +306,13 @@ button i.fa{
     width:auto;
 }
 /*Admin Page*/
-#addAdmin, #allUsers{
+#addAdmin{
     margin-left: 20px;
     margin-bottom: 10px;
 }
 /*style for Admin page submit button*/
 .admin-logo-change{
-    width: 100px;
+    width: 120px;
     margin:0 auto;
 }
 .provider-logo-change{
