Edited Register page
(1) Show message if organization name already exists.
(2) Show message if email already exists.
(3) Show message after clicking Submit, indicating that an administrator will look over it.

--- a/grasa_event_locator/static/css/custom.css
+++ b/grasa_event_locator/static/css/custom.css
@@ -254,7 +254,7 @@ body{
 .form-register {
   width: 50%;
   max-width: 330px;
-  padding: 15px;
+  padding: 10px;
   margin: 0 auto;
 }
 
@@ -422,8 +422,10 @@ span.subhead::before, span.subhead::after {
 	text-align:center;
 }
 
-.alert alert-block alert-danger {
-	display: none;
+.alert {
+	
+	color: red;
+	padding-top: none;
 }
 
 
