--- a/grasa_event_locator/static/css/custom.css
+++ b/grasa_event_locator/static/css/custom.css
@@ -202,7 +202,7 @@ body{
 
 
 /* Style the submit button */
-.form-changePW input[type=submit] {
+.form-changePW button[type=submit] {
   margin-bottom: 10px;
   border-top-left-radius: 0;
   border-top-right-radius: 0;
