--- a/grasa_event_locator/templates/search/search.html
+++ b/grasa_event_locator/templates/search/search.html
@@ -21,7 +21,7 @@
                         <h2 class="mb-0"><button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseTransportation" aria-expanded="true" aria="" controls="collapseTransportation">Transportation</button></h2></div>
                     <div id="collapseTransportation" class="collapse" data-parent="#accordionExample">
                         <div class="card-body">
-                            <!--put transporation here-->
+                            {{ form.transportations }}
                         </div>
                     </div>
                 </div>
@@ -30,7 +30,7 @@
                         <h2 class="mb-0"><button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseGrades" aria-expanded="true" aria="" controls="collapseGrades">Grades Served</button></h2></div>
                     <div id="collapseGrades" class="collapse" data-parent="#accordionExample">
                         <div class="card-body">
-                            <!--put grades here-->
+                            {{ form.grades }}
                         </div>
                     </div>
                 </div>
@@ -39,7 +39,7 @@
                         <h2 class="mb-0"><button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseGender" aria-expanded="true" aria="" controls="collapseGender">Gender</button></h2></div>
                     <div id="collapseGender" class="collapse" data-parent="#accordionExample">
                         <div class="card-body">
-                            <!-- put gender here-->
+                            {{ form.genders }}
                         </div>
                     </div>
                 </div>
@@ -58,7 +58,7 @@
                         <h2 class="mb-0"><button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseFees" aria-expanded="true" aria="" controls="collapseFees">Fees</button></h2></div>
                     <div id="collapseFees" class="collapse" data-parent="#accordionExample">
                         <div class="card-body">
-                            <!--put fees in here -->
+                            {{ form.fees }}
                         </div>
                     </div>
                 </div>
@@ -67,7 +67,7 @@
                         <h2 class="mb-0"><button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseTiming" aria-expanded="true" aria="" controls="collapseTiming">Timing</button></h2></div>
                     <div id="collapseTiming" class="collapse" data-parent="#accordionExample">
                         <div class="card-body">
-                            <!--put timing in here-->
+                            {{ form.timings }}
                         </div>
                     </div>
                 </div>
