Replace Index with search
Since Index is a standard for homepages instead of just deleting it all I have set all instances of index.php to redirect to /search/. Merged all functionality currently in master index.php to search before doing so

--- a/grasa_event_locator/templates/search/search.html
+++ b/grasa_event_locator/templates/search/search.html
@@ -1,5 +1,6 @@
 {% include "header.php" %}
 <!-- Homepage -->
+
 <div class="container home-container">
     <form method="get" action=".">
     <div class="row">
@@ -112,9 +113,12 @@
                         </div>
                         <div class="col-sm-6 right-info">
                                 {% for t in result.object.categories.all %}
-                                <span class="badge badge-info card-title">
-                                {{ t }}
-                                </span>
+                                    <!--Merged from index, makes only activity categories show-->
+                                    {% if t.id <= 18 %}
+                                        <span class="badge badge-info card-title">
+                                        {{ t }}
+                                        </span>
+                                    {% endif %}
                                 {% endfor %}
                             <h6 class="card-subtitle mb-2 text-muted"><i class="fa fa-map-marker" aria-hidden="true"></i> {{ result.object.address }}</h6>
                         </div>
@@ -184,11 +188,11 @@
       shadowSize: [41, 41]
     });
 
-    var marker = L.marker([43.0846, -77.6743]).addTo(mymap);
-    marker.bindPopup("<div class='leafeventPopup'><b>Soccer Program</b><br>Rochester Middle School<br><a href='event.php'>Details</a></div>").openPopup();
-
-    var marker2 = L.marker([43.0966, -77.6973], {icon: greenIcon}).addTo(mymap);
-    marker2.bindPopup("<b>Cooking for Kids</b><br>Henrietta Elementary School<br><a href='event.php'>Details</a></div>");
+    //Merged from index, plots all events on map
+    {% for lat, lng, html_string in zip_table %}
+    var marker = L.marker([{{ lat }},  {{ lng }}]).addTo(mymap);
+    marker.bindPopup("<div class='leafeventPopup'>{{ html_string | safe }}</div>").openPopup();
+    {% endfor %}
 
 </script>
 {% include "footer.php" %}
