Edit Contact Page
Removed the fill-out info contact form and added the soical media icons at the bottom.

--- a/grasa_event_locator/static/css/custom.css
+++ b/grasa_event_locator/static/css/custom.css
@@ -409,7 +409,7 @@ span.subhead::before, span.subhead::after {
 
 /*Styles for Contact section*/
 .contact-container {
-	text-align: left;
+	text-align: center;
     /*border: solid 1px lightgray;    */
     padding:5px;
     padding-left:20px;
@@ -424,6 +424,57 @@ span.subhead::before, span.subhead::after {
 	display:block;
 	position:relative;
 }
+
+#office {
+	padding-bottom: 10px;
+}
+
+
+#email {
+	padding-bottom: 10px;
+}
+
+/* Styles for Social Media icons on About & Contact page */
+
+.social-container {	
+	padding: 10px;
+	padding-top: 20px;
+	text-align: center;
+}
+
+.fa {
+  padding: 20px;
+  font-size: 30px;
+  width: 50px;
+  text-align: center;
+  text-decoration: none;
+  margin: 5px 2px;
+}
+
+.fa:hover {
+    opacity: 0.7;
+}
+
+.fa-facebook {
+  background: #3B5998;
+  color: white;
+}
+
+.fa-twitter {
+  background: #55ACEE;
+  color: white;
+}
+
+.fa-google {
+  background: #dd4b39;
+  color: white;
+}
+
+.fa-linkedin {
+  background: #007bb5;
+  color: white;
+}
+
 
 /*Styles for HomePage title*/
 .jumbotron {
