provider and admin updates
- added change password modal to both changes
- added dropdown menu on both to change login email
- added additional settings to provider page

--- a/grasa_event_locator/static/css/custom.css
+++ b/grasa_event_locator/static/css/custom.css
@@ -304,12 +304,15 @@ body{
     padding-left: 10px;  
     padding-bottom: 20px;
 }
-.changeNameInput{
+.changeNameInput, .changeEmailInput{
     visibility: hidden;
     height: 0;
 }
 
 /*icon width fix*/
+.event-page-card {
+    border: none;
+}
 .event-page-card i.fa, .event-container i.fa{
     width:30px;
 }
