Front end lauren 6 (#106)
* nathaniel's checkbox issue fix

* "View All" pages updates (#102) (#104)

* Registration validation and some other style fixes (#98) (#99)

* validation for create admin

* Header style change and send "view all" page updates

* invite provider button and modal

* more style updates

* provider and admin updates

- added change password modal to both changes
- added dropdown menu on both to change login email
- added additional settings to provider page

* merge repair

* tighter validation for create event location

* better state validation

--- a/grasa_event_locator/static/css/custom.css
+++ b/grasa_event_locator/static/css/custom.css
@@ -304,12 +304,15 @@ body{
     padding-left: 10px;  
     padding-bottom: 20px;
 }
-.changeNameInput{
+.changeNameInput, .changeEmailInput{
     visibility: hidden;
     height: 0;
 }
 
 /*icon width fix*/
+.event-page-card {
+    border: none;
+}
 .event-page-card i.fa, .event-container i.fa{
     width:30px;
 }
@@ -348,6 +351,12 @@ button i.fa{
 .event-container ul.multiselect-container{
     overflow-y: scroll;
     max-height:200px;
+}
+label.pl-2.checkbox{
+    width:100%;
+}
+.custom-select{
+    text-overflow: ellipsis;
 }
 /*makes footer not cover content on mobile*/
 @media (max-width: 576px){
