Revert "merge repair"
This reverts commit ce746118c45d10ec891f04a0fa6aebde47f56db2.

--- a/grasa_event_locator/static/css/custom.css
+++ b/grasa_event_locator/static/css/custom.css
@@ -411,6 +411,7 @@ label.pl-2.checkbox{
 	text-align:center;
 	display:block;
 	position:relative;
+	
 }
 
 #about {
@@ -464,16 +465,16 @@ span.subhead::before, span.subhead::after {
 	text-align: center;
 }
 
-.social-container .fa {
-  padding-top: 20px;
-  padding-bottom: 20px;
+.fa {
+  padding: 20px;
   font-size: 30px;
   width: 50px;
   text-align: center;
   text-decoration: none;
   margin: 5px 2px;
 }
-.social-container .fa:hover {
+
+.fa:hover {
     opacity: 0.7;
 }
 
